Setup sbt 0.12.x properly, republished to Element Releases (public).

--- a/code/scala/ripper/project/strap/sbt.boot.properties
+++ b/code/scala/ripper/project/strap/sbt.boot.properties
@@ -15,10 +15,10 @@
   element-nexus-ivy: http://maven.element.hr/nexus/content/groups/public/, [organization]/[module]/[revision]/[type]s/[artifact](-[classifier]).[ext]
 
 [boot]
- directory: ../../../.sbt/1by7
+ directory: ../../../../.sbt/1by7
 
 [ivy]
-  ivy-home: ../../../.ivy2/1by7
+  ivy-home: ../../../../.ivy2/1by7
   checksums: ${sbt.checksums-sha1,md5}
   override-build-repos: ${sbt.override.build.repos-false}
   repository-config: ${sbt.repository.config-${sbt.global.base-${user.home}/.sbt}/repositories}
