--- a/code/scala/ripper/project/strap/sbt.boot.properties
+++ b/code/scala/ripper/project/strap/sbt.boot.properties
@@ -1,13 +1,14 @@
 [scala]
-  version: ${sbt.scala.version-auto}
+  version: 2.10.3
 
 [app]
   org: ${sbt.organization-org.scala-sbt}
   name: sbt
-  version: ${sbt.version-read(sbt.version)[0.12.0]}
+  version: ${sbt.version-read(sbt.version)[0.13.0]}
   class: ${sbt.main.class-sbt.xMain}
   components: xsbti,extra
   cross-versioned: ${sbt.cross.versioned-false}
+  resources: ${sbt.extraClasspath-}
 
 [repositories]
   local
@@ -15,10 +16,10 @@
   element-nexus-ivy: http://maven.element.hr/nexus/content/groups/public/, [organization]/[module]/[revision]/[type]s/[artifact](-[classifier]).[ext]
 
 [boot]
- directory: ../../../../.sbt/1by7
+  directory: ${sbt.boot.directory-${sbt.global.base-${user.home}/.sbt}/boot/}
 
 [ivy]
-  ivy-home: ../../../../.ivy2/1by7
+  ivy-home: ${sbt.ivy.home-${user.home}/.ivy2/1by7}
   checksums: ${sbt.checksums-sha1,md5}
   override-build-repos: ${sbt.override.build.repos-false}
   repository-config: ${sbt.repository.config-${sbt.global.base-${user.home}/.sbt}/repositories}
